# srs2dge

./: Cargo.toml
crates/srs2dge-core/: Cargo.toml
crates/srs2dge-core/src/: lib.rs  util.rs
crates/srs2dge-core/src/batch/: batcher.rs  mesh.rs  mod.rs  prelude.rs  quad.rs
crates/srs2dge-core/src/buffer/: mod.rs  uniform.rs
crates/srs2dge-core/src/buffer/index/: mod.rs
crates/srs2dge-core/src/buffer/vertex/: mod.rs
crates/srs2dge-core/src/frame/: mod.rs  render_pass.rs
crates/srs2dge-core/src/shader/: mod.rs
crates/srs2dge-ecs/src/: lib.rs  sprite.rs
crates/srs2dge-gizmos/src/: box.rs  circle.rs  line.rs
crates/srs2dge-gui/: Cargo.toml
crates/srs2dge-gui/src/: lib.rs  prelude.rs
crates/srs2dge-gui/src/widget/: base.rs  empty.rs  mod.rs  prelude.rs  root.rs  sub.rs
crates/srs2dge-link-static/: Cargo.toml
crates/srs2dge-link-static/src/: lib.rs  prelude.rs
crates/srs2dge-text/src/: vbo.rs
examples/asteroids/: asteroid.rs  bullet.rs  player.rs
examples/asteroids/mesh/: asteroid.rs  mod.rs  player.rs
examples/boilerplate/: main.rs
examples/gui/: main.rs
