[package]
name = "srs2dge-gui"
version = "0.2.0"
edition = "2021"
description = "srs2dge GUI"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srs2dge-core = { path = "../srs2dge-core", version = "0.2" }
srs2dge-presets = { path = "../srs2dge-presets", version = "0.2" }
log = "0.4"
